Handle authencation successfully

--- a/FamilyX/Podfile
+++ b/FamilyX/Podfile
@@ -24,4 +24,5 @@ target 'FamilyTree' do
   pod 'AlamofireObjectMapper', '~> 5.0'
   pod 'ReachabilitySwift', '~> 3'
   pod 'SideMenu'
+  pod 'Kingfisher'
 end
